--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,11 @@
 *{
   margin: 0;
-  box-sizing: border-box;
-}
-*:not(ul):not(ol) {
   padding: 0;
-}
-html{
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.container{
+  width: 1000px;
+  margin: 0 auto;
 }
